# signal_generator

./: CMakeLists.txt  config.json  main.cpp
chart_exporter/: chart_exporter.cpp  chart_exporter.h
config/: config.cpp  config.h
csv_exporter/: csv_exporter.cpp  csv_exporter.h
discrete_signal/: discrete_signal.h
discrete_signal/amplitude/: amplitude.cpp  amplitude.h
discrete_signal/cos_discrete_signal/: cos_discrete_signal.cpp  cos_discrete_signal.h
discrete_signal/result_discrete_signal/: result_discrete_signal.cpp  result_discrete_signal.h
discrete_signal/sin_discrete_signal/: sin_discrete_signal.cpp  sin_discrete_signal.h
discrete_signal_config_validator/: discrete_signal_config_validator.cpp  discrete_signal_config_validator.h
